finished first challenge

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="test"><span>Test</span></div>
+<input type="text" id="search" placeholder="Search hero">
+<div id="itemHolder"></div>
 
 <script src="main.js"></script>
 </body>
