--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Marvel Challenge</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<input type="text" id="search" placeholder="Search hero">
+<input autocomplete="off" type="text" id="search" placeholder="Search hero">
 <div id="itemHolder"></div>
+<div id="bookmarkList"></div>
 
 <script src="main.js"></script>
 </body>
