--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <input autocomplete="off" type="text" id="search" placeholder="Search hero">
 <div id="itemHolder"></div>
 <div id="bookmarkList"></div>
+<div id="bookmarkListHistory"></div>
 
 <script src="main.js"></script>
 </body>
