--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 <input autocomplete="off" type="text" id="search" placeholder="Search hero">
+<button id="clearHistory">Clear Bookmark History</button>
 <div id="itemHolder"></div>
-<div id="bookmarkList"></div>
+<h1>Bookmark List</h1>
+<div id="bookmarkList">
+</div>
+<h1>Bookmark History</h1>
 <div id="bookmarkListHistory"></div>
+<!--<div id="pagination"></div>-->
 
 <script src="main.js"></script>
+
 </body>
 </html>
