--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="bookmarkListHistory"></div>
 <!--<div id="pagination"></div>-->
 
-<script src="main.js"></script>
+<script src="main2.js"></script>
 
 </body>
 </html>
